small phase 07 popup show data of IoT devices intergrate new api keep test env
